--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,8 +140,9 @@ img {
   width: 100%;
   top: 0;
   left: 0;
-  background-color: var(--black-color);
+  background-color: transparent;
   z-index: var(--z-fixed);
+  transition: background-color 0.4s;
 }
 
 .nav {
@@ -219,11 +220,104 @@ img {
   right: 0;
 }
 /* Change background header */
+.bg-header {
+  background-color: var(--body-color);
+  box-shadow: 0 4px 16px hsla(255, 90%, 8%, 0.1);
+}
+
+.bg-header .nav__logo span,
+.bg-header .nav__toggle {
+  color: var(--title-color);
+}
 
 /* Active link */
-
+.active-link {
+  color: var(--first-color);
+}
 /*=============== HOME ===============*/
+.home {
+  position: relative;
+  background-color: var(--black-color);
+}
 
+.home___container {
+  position: relative;
+  row-gap: 3rem;
+  padding-block: 2.5rem;
+}
+
+.home__content {
+  row-gap: 2.5rem;
+}
+
+.home__data {
+  text-align: center;
+}
+
+.home__title {
+  color: var(--white-color);
+  font-size: var(--big-font-size);
+  font-weight: var(--font-bold);
+  margin-bottom: 1rem;
+}
+
+.home__description {
+  margin-bottom: 2.5rem;
+  color: var(--text-color-light);
+}
+
+.home__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.home__info {
+  display: flex;
+  justify-content: center;
+  column-gap: 4.5rem;
+}
+
+.home__info-title {
+  color: var(--second-color);
+  font-size: var(--big-font-size);
+  font-weight: var(--font-bold);
+  margin-bottom: 0.5rem;
+}
+
+.home__info-description {
+  font-size: var(--small-font-size);
+  color: var(--white-color);
+}
+
+.home__images {
+  position: relative;
+  justify-self: center;
+}
+
+.home__img-1 {
+  width: 250px;
+  margin-left: 3.5rem;
+}
+
+.home__img-2 {
+  width: 150px;
+  border: 5px solid var(--black-color);
+  position: absolute;
+  left: 0;
+  bottom: -3.5rem;
+}
+
+.home__lines {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: right;
+}
 /*=============== BUTTON ===============*/
 .button {
   display: inline-flex;
@@ -239,27 +333,462 @@ img {
   color: var(--white-color);
 }
 
+.button__link {
+  display: flex;
+  align-items: center;
+  column-gap: 0.25rem;
+  color: var(--first-color);
+}
+
+.button__link span {
+  font-weight: var(--font-semi-bold);
+}
+
+.button__link i {
+  font-size: 1.5rem;
+  transition: transform 0.4s;
+}
+
+.button__link:hover i {
+  transform: translateX(0.25rem);
+}
 /*=============== ABOUT ===============*/
+.about__container {
+  row-gap: 8rem;
+}
 
+.about__data {
+  text-align: center;
+}
+
+.about__description {
+  margin-bottom: 2rem;
+}
+
+.about__list {
+  text-align: initial;
+  grid-template-columns: repeat(2, 130px);
+  justify-content: center;
+  gap: 1.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.about__list-item {
+  display: flex;
+  column-gap: 0.5rem;
+  color: var(--title-color);
+}
+
+.about__list-item i {
+  font-size: 1.25rem;
+  color: var(--first-color);
+}
+
+.about__images {
+  position: relative;
+  justify-content: center;
+}
+
+.about__img-1 {
+  width: 200px;
+  border: 5px solid var(--body-color);
+  position: absolute;
+  top: -5rem;
+  left: 6rem;
+}
+
+.about__img-2 {
+  width: 250px;
+  margin-right: 2.5rem;
+}
 /*=============== SERVICES ===============*/
+.services {
+  position: relative;
+}
 
+.services__container {
+  position: relative;
+  row-gap: 3rem;
+}
+
+.services__data {
+  text-align: center;
+}
+
+.services__description {
+  margin-bottom: 2rem;
+}
+
+.services__card {
+  width: 260px;
+  background-color: var(--container-color);
+  border: 2px solid var(--gray-border);
+  padding: 2rem 1rem 3.5rem;
+  transition: border-color 0.4s;
+}
+
+.services__card:hover {
+  border-color: var(--first-color);
+}
+
+.services__icon {
+  width: 70px;
+  height: 70px;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.services__title {
+  font-size: var(--h2-font-size);
+  margin-bottom: 0.5rem;
+}
+
+.services__shape {
+  position: absolute;
+  width: 100%;
+  height: 245px;
+  background-color: var(--black-color);
+  bottom: 0;
+  left: 0;
+}
 /* Swipe class */
+.swiper {
+  margin-inline: initial;
+  padding-bottom: 4rem;
+}
 
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  content: "";
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  top: initial;
+  bottom: 0;
+  width: 32px;
+  height: 32px;
+  background-color: var(--container-color);
+  box-shadow: 0 2px 8px hsla(255, 80%, 4%, 0.1);
+  border-radius: 50%;
+  font-size: 1.5rem;
+  color: var(--title-color);
+}
+
+.swiper-button-prev {
+  left: calc(50% - 3rem);
+}
+
+.swiper-button-next {
+  right: calc(50% - 3rem);
+}
 /*=============== PROJECTS ===============*/
+.projects {
+  background-color: var(--black-color);
+}
 
+.projects .section__title {
+  color: var(--white-color);
+}
+
+.projects__container {
+  padding-block: 1.5rem;
+}
+
+.projects__card {
+  background-color: var(--container-color);
+  border: 2px solid transparent;
+  background-clip: content-box;
+  transition: border-color 0.4s;
+}
+
+.projects__card:hover {
+  border-color: var(--first-color);
+}
+
+.projects__data {
+  padding: 1.5rem 1rem 3rem;
+}
+
+.projects__title {
+  font-size: var(--h2-font-size);
+  margin-block: 0.5rem;
+}
+
+.projects_date {
+  display: block;
+  font-weight: var(--font-medium);
+  color: var(--title-color);
+  margin-bottom: 1.5rem;
+}
 /*=============== CONTACT ===============*/
+.contact__container {
+  row-gap: 3rem;
+  padding-block: 1.5rem;
+}
 
+.contact__img {
+  width: 320px;
+  justify-self: center;
+}
+
+.contact__data {
+  grid-template-columns: 230px;
+  justify-content: center;
+  row-gap: 1.5rem;
+}
+
+.contact__card {
+  background-color: var(--container-color);
+  border: 2px solid var(--gray-border);
+  padding: 1.5rem 2rem;
+  text-align: center;
+  transition: border-color 0.4s;
+}
+
+.contact__card:hover {
+  border-color: var(--first-color);
+}
+
+.contact__icon {
+  width: 48px;
+  height: 48px;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  font-size: 2rem;
+  margin: 0 auto 1.25rem;
+}
+
+.contact__title {
+  font-size: var(--h2-font-size);
+  margin-bottom: 0.5rem;
+}
+
+.contact__info {
+  font-style: normal;
+}
+
+.contact__social {
+  display: flex;
+  justify-content: center;
+  column-gap: 1rem;
+}
+
+.contact__social-link {
+  font-size: 1.5rem;
+  color: var(--first-color);
+  transition: transform 0.4s;
+}
+
+.contact__social-link:hover {
+  transform: translateY(-0.25rem);
+}
 /*=============== FOOTER ===============*/
+.footer {
+  background-color: var(--black-color);
+  color: var(--text-color-light);
+  padding-block: 3.5rem 2rem;
+}
 
+.footer__container {
+  row-gap: 4rem;
+  padding-bottom: 4rem;
+  border-bottom: 1px solid var(--black-border);
+}
+
+.footer__logo {
+  display: inline-flex;
+  align-items: center;
+  column-gap: 0.25rem;
+}
+
+.footer__logo span {
+  color: var(--white-color);
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
+}
+
+.footer__logo i {
+  color: var(--first-color);
+  font-size: 1.5rem;
+}
+
+.footer__description {
+  margin-block: 1rem;
+}
+
+.footer__email,
+.footer__info {
+  font-style: normal;
+}
+
+.footer__content {
+  grid-template-columns: repeat(2, max-content);
+  gap: 4rem 3rem;
+}
+
+.footer__title {
+  font-size: var(--h3-font-size);
+  color: var(--white-color);
+  margin-bottom: 1rem;
+}
+
+.footer__links,
+.footer__list {
+  display: grid;
+  row-gap: 0.5rem;
+}
+
+.footer__link {
+  color: var(--text-color-light);
+  transition: color 0.4s;
+}
+
+.footer__link:hover {
+  color: var(--first-color);
+}
+
+.footer__social {
+  display: flex;
+  column-gap: 1rem;
+}
+
+.footer__social-link {
+  font-size: 1.5rem;
+  color: var(--first-color);
+  transition: transform 0.4s;
+}
+
+.footer__social-link:hover {
+  transform: translateY(-0.25rem);
+}
+
+.footer__copy {
+  display: block;
+  text-align: center;
+  font-size: var(--small-font-size);
+  margin-top: 2rem;
+}
 /*=============== SCROLL BAR ===============*/
-
+::-webkit-scrollbar {
+  width: 0.6rem;
+  background-color: hsl(255, 5%, 75%);
+}
+::-webkit-scrollbar-thumb {
+  width: 0.6rem;
+  background-color: hsl(255, 5%, 65%);
+}
+::-webkit-scrollbar-thumb:hover {
+  width: 0.6rem;
+  background-color: hsl(255, 5%, 55%);
+}
 /*=============== SCROLL UP ===============*/
+.scrollup {
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background-color: var(--body-color);
+  box-shadow: 0 4px 16px hsla(255, 90%, 8%, 0.15);
+  color: var(--title-color);
+  display: inline-flex;
+  padding: 6px;
+  font-size: 1.25rem;
+  z-index: var(--z-tooltip);
+  transition: bottom 0.4s, transform 0.4s;
+}
+
+.scrollup:hover {
+  transform: translateY(-0.5rem);
+}
 
 /* Show Scroll Up */
-
+.show-scroll {
+  bottom: 3rem;
+}
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
+@media screen and (max-width: 340px) {
+  .container {
+    margin-inline: 1rem;
+  }
+
+  .section__title {
+    font-size: 1.25rem;
+  }
+
+  .home__title {
+    font-size: 1.75rem;
+  }
+
+  .home__buttons {
+    flex-direction: column;
+  }
+
+  .home__img-1 {
+    width: 200px;
+    margin-left: 1.5rem;
+  }
+
+  .about__list {
+    grid-template-columns: repeat(1, 200px);
+  }
+
+  .about__img-1 {
+    width: 150px;
+    left: 4rem;
+  }
+
+  .about__img-2 {
+    width: 200px;
+    margin-right: 0;
+  }
+
+  .footer__content {
+    grid-template-columns: repeat(1, max-content);
+  }
+}
 
 /* For medium devices */
+@media screen and (min-width: 540px) {
+  .home__container,
+  .about__container,
+  .services__container,
+  .projects__container,
+  .contact__container {
+    grid-template-columns: 360px;
+    justify-content: center;
+  }
+
+  .footer__content {
+    grid-template-columns: repeat(3, max-content);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav__menu {
+    width: 50%;
+  }
+
+  .projects__container {
+    grid-template-columns: repeat(2, 330px);
+  }
+
+  .contact__data {
+    grid-template-columns: repeat(2, 240px);
+  }
+
+  .footer__container {
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+  }
+}
 
 /* For large devices */
